likes no longer overlapping with navigation bar

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -96,3 +96,7 @@ input {
 .new-list-button {
   margin-top: -10px !important;
 }
+
+.likes-list {
+  margin-top: 10px;
+}
